# social-ai-studio

./: .env.example  .gitignore  Dockerfile  LICENSE  README.ja.md  README.md  azure.yaml  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: python-foundry.instructions.md  security.instructions.md
.github/workflows/: ci.yml  deploy.yml  security.yml
data/: brand_guidelines.md
docs/: ARCHITECTURE.md  DESIGN.md  SPEC.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ContentCards.tsx  ContentDisplay.tsx  Header.tsx  HistorySidebar.tsx  InputForm.tsx  PhasesStepper.tsx  ReasoningPanel.tsx  SuggestedQuestions.tsx  ToolEvents.tsx
frontend/src/hooks/: useI18n.ts  useTheme.ts
frontend/src/lib/: api.ts  i18n.ts
infra/: main.bicep
src/: __init__.py  agent.py  agentic_retrieval.py  api.py  client.py  config.py  content_safety.py  database.py  evaluation.py  models.py  telemetry.py  tools.py  vector_store.py
src/prompts/: __init__.py  system_prompt.py
tests/: conftest.py  test_agent.py  test_agentic_retrieval.py  test_api.py  test_config.py  test_models.py  test_prompt.py  test_tools.py
